Mejora estetica de strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,10 @@
     <string name="app_name">OSC</string>
 
     <!--Strings del Login-->
-    <string name="welcome_app">Bienvenido a Ordene Su Comida</string>
+    <string name="welcome_app">Bienvenido a \nOrdene Su Comida</string>
     <string name="email">Correo Electrónico</string>
     <string name="contraseña">Contraseña</string>
-    <string name="signin">Iniciar sesión</string>
+    <string name="signin">INICIAR SESIÓN</string>
     <string name="o">o</string>
     <string name="new_here">¿Nuevo en Ordene Su Comida?</string>
     <string name="signup">Regístrate aquí</string>
