--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,6 @@
     <string name="required_image">Debes subir una imagen</string>
     <string name="uploading">Subiendo archivo…</string>
     <string name="error">Error</string>
-    <string name="update_data">Actualizar Datos</string>
 
     <!--Strings del Login-->
     <string name="welcome_app">Bienvenido a \nOrdene Su Comida</string>
@@ -47,6 +46,9 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="update_data">Actualizar</string>
+    <string name="contrasena_anterior">Contraseña Anterior</string>
+    <string name="nueva_contrasena">Contraseña nueva (opcional)</string>
 
 
 </resources>
