--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,8 @@
     <string name="contrasena_anterior">Contraseña Actual</string>
     <string name="nueva_contrasena">Contraseña nueva (opcional)</string>
     <string name="acerca_de">Acerca de</string>
+    <string name="Nombre_soda">Nombre Soda</string>
+    <string name="verVideo">Ver video</string>
 
 
 </resources>
