Nuevo diseño de cada item de la lista de pedidos para la soda

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,8 @@
 
     <!--Strings de los Pedidos-->
     <string name="pedidos">Pedidos</string>
+    <string name="pending">Pendiente</string>
+    <string name="completed">Completado</string>
 
     <!--Strings Soda-->
     <string name="sodas">Sodas</string>
