Mostrar detalles de cada orden y completarlas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,10 +54,12 @@
     <string name="activate_product">Producto disponible para hoy&#160;</string>
 
     <!--Strings de la Orden-->
+    <string name="orden">Orden</string>
     <string name="order">Ordenar</string>
     <string name="your_order">Tu Orden</string>
     <string name="cash">Efectivo</string>
     <string name="total">Total</string>
+    <string name="complete">Completar</string>
 
     <!--Strings de los Pedidos-->
     <string name="pedidos">Pedidos</string>
